Refactor routes :motorway:  (#19)
* feat: updated author model

* feat: query book from author

* feat: books genres moved

* feat: get books by genre

* doc: updated open api
