# api/src/controllers/GenreController.ts
@@ -12,8 +12,8 @@ export const GenreController: Controller = (
     ctx.body = await genreService.show();
   });
 
-  router.get('/books/:id/genres', async (ctx: Context) => {
-    ctx.body = await genreService.showGenres(ctx);
+  router.get('/genres/:genreID/books', async (ctx: Context) => {
+    ctx.body = await genreService.showBooks(ctx);
   });
 
   router.post('/genres', async (ctx: Context) => {
